--- a/Proyecto BD/Views/Home/Eventos.cshtml
+++ b/Proyecto BD/Views/Home/Eventos.cshtml
@@ -23,7 +23,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Show de Comedia
                   </h5>
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
@@ -99,7 +99,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Burger
+                    Feria Cientifica
                   </h5>
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
@@ -175,7 +175,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Concierto de Cepillin
                   </h5>
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
