--- a/Proyecto BD/Views/Home/Eventos.cshtml
+++ b/Proyecto BD/Views/Home/Eventos.cshtml
@@ -1,15 +1,48 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<header class="header_section">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg custom_nav-container ">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                <span>
+                    Tickets+
+                </span>
+            </a>
 
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class=""> </span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav  mx-auto ">
+                    <li class="nav-item active">
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Eventos">Eventos</a>
+                    </li>
+                </ul>
+                <div class="user_option">
+                    <a href="" class="user_link">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                    </a>
+                    <a class="order_online" asp-controller="Home" asp-action="Carrito">
+                        Compra ahora
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </div>
+</header>
 
   <!-- food section -->
 
   <section class="food_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
-        <h2>
-          Our Menu
+        <h2 style="color: white">
+          Eventos
         </h2>
       </div>
 
@@ -30,9 +63,9 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $20
+                      Gratis
                     </h6>
-                    <a href="">
+                                    <a class="" asp-controller="Home" asp-action="Carrito">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
                           <g>
@@ -106,9 +139,9 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $15
+                      Gratis
                     </h6>
-                    <a href="">
+                                    <a class="" asp-controller="Home" asp-action="Carrito">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
                           <g>
@@ -175,16 +208,16 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Concierto de Cepillin
+                    Concierto
                   </h5>
                   <p>
                     Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
                   </p>
                   <div class="options">
                     <h6>
-                      $17
+                      Gratis
                     </h6>
-                    <a href="">
+                                    <a class="" asp-controller="Home" asp-action="Carrito">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                         <g>
                           <g>
