--- a/Proyecto BD/Views/Home/Carrito.cshtml
+++ b/Proyecto BD/Views/Home/Carrito.cshtml
@@ -5,7 +5,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                <span>
+                <span style="font-size: 64px; color: goldenrod">
                     Tickets+
                 </span>
             </a>
@@ -24,9 +24,9 @@
                     </li>
                 </ul>
                 <div class="user_option">
-                    <a href="" class="user_link">
+                    @*<a href="" class="user_link">
                         <i class="fa fa-user" aria-hidden="true"></i>
-                    </a>
+                    </a>*@
                     <a class="order_online" asp-controller="Home" asp-action="Carrito">
                         Compra ahora
                     </a>
