--- a/Proyecto BD/Views/Home/Index.cshtml
+++ b/Proyecto BD/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
 <header class="header_section">
     <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                <span>
+            <a  class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                <span style="font-size: 64px; color: goldenrod">
                     Tickets+
                 </span>
             </a>
@@ -25,9 +25,9 @@
                     </li>
                 </ul>
                 <div class="user_option">
-                    <a href="" class="user_link">
+                    @*<a href="" class="user_link">
                         <i class="fa fa-user" aria-hidden="true"></i>
-                    </a>
+                    </a>*@
                     <a class="order_online" asp-controller="Home" asp-action="Carrito">
                         Compra ahora
                     </a>
@@ -36,7 +36,7 @@
         </nav>
     </div>
 
-    <section class="slider_section ">
+    <section  class="slider_section ">
         <div id="customCarousel1" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -44,7 +44,7 @@
                         <div class="row">
                             <div class="col-md-7 col-lg-6 ">
                                 <div class="detail-box">
-                                    <h1>
+                                    <h1 style="font-size: 30px">
                                         Conciertos
                                     </h1>
                                     <p>
@@ -65,7 +65,7 @@
                         <div class="row">
                             <div class="col-md-7 col-lg-6 ">
                                 <div class="detail-box">
-                                    <h1>
+                                    <h1 style="font-size: 30px">
                                         Ferias y Convenciones
                                     </h1>
                                     <p>
@@ -86,7 +86,7 @@
                         <div class="row">
                             <div class="col-md-7 col-lg-6 ">
                                 <div class="detail-box">
-                                    <h1>
+                                    <h1 style="font-size: 30px">
                                         Teatro y comedia
                                     </h1>
                                     <p>
