--- a/Proyecto BD/wwwroot/css/style.scss
+++ b/Proyecto BD/wwwroot/css/style.scss
@@ -321,7 +321,7 @@ a:focus {
 .slider_section {
   flex: 1;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   position: relative;
   padding: 45px 0 75px 0;
 
