--- a/Proyecto BD/Views/Home/Eventos.cshtml
+++ b/Proyecto BD/Views/Home/Eventos.cshtml
@@ -52,7 +52,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                                <img src="~/images/f1.png" alt="">
+                    <img src="~/images/evento1.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -128,7 +128,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                                <img src="~/images/f2.png" alt="">
+                    <img src="~/images/evento2.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -204,7 +204,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                                <img src="~/images/f3.png" alt="">
+                    <img src="~/images/evento3.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
