--- a/Proyecto BD/Views/Home/Index.cshtml
+++ b/Proyecto BD/Views/Home/Index.cshtml
@@ -127,7 +127,7 @@
           <div class="col-md-6  ">
             <div class="box ">
               <div class="img-box">
-                <img src="images/o1.jpg" alt="">
+                  <img src="~/images/index1.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h5>
@@ -196,7 +196,7 @@
           <div class="col-md-6  ">
             <div class="box ">
               <div class="img-box">
-                <img src="images/o2.jpg" alt="">
+                  <img src="~/images/index2.jpg" alt="">
               </div>
               <div class="detail-box">
                 <h5>
@@ -279,7 +279,7 @@
       <div class="row">
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/about-img.png" alt="">
+              <img src="~/images/index3.png" alt="">
           </div>
         </div>
         <div class="col-md-6">
