--- a/Proyecto BD/Views/Shared/_Layout.cshtml
+++ b/Proyecto BD/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <link rel="shortcut icon" href="~/images/favicon.png" type="">
+    <link rel="shortcut icon" href="~/images/Ticketlogo.png" type="">
 
-    <title> Feane </title>
+    <title> Tickets+ </title>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="~/css/bootstrap.css" />
