--- a/Proyecto BD/Views/Home/Carrito.cshtml
+++ b/Proyecto BD/Views/Home/Carrito.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model RecuperarViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 <header class="header_section">
@@ -53,15 +54,18 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form_container">
-                    <form action="">
+                        <form action="@Url.Content("~/Home/Recuperar")" method="post">
                         <div>
                             <input type="text" class="form-control" placeholder="Nombre" />
                         </div>
                         <div>
                             <input type="text" class="form-control" placeholder="Numero de Telefono" />
                         </div>
-                        <div>
-                            <input type="email" class="form-control" placeholder="Correo Electronico" />
+                        <div >
+                                
+                                @Html.TextBoxFor(d => d.Email, null, new { @class = "form-control", id = "correo" })
+                                @Html.ValidationMessageFor(d => d.Email, null, new { @style = "color:red" })
+                                
                         </div>
                         <div>
                 <select class="form-control nice-select wide">
@@ -79,8 +83,8 @@
                   </option>
                 </select>
               </div>
-                        <div class="btn_box">
-                            <button>
+                            <div class="btn_box" >
+                                <button id="Enviar">
                                 Comprar
                             </button>
                         </div>
@@ -94,12 +98,12 @@
 
 <!-- footer section -->
 <!-- jQery -->
-<script src="js/jquery-3.4.1.min.js"></script>
+    <script src="~/js/jquery-3.4.1.min.js"></script>
 <!-- popper js -->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
 </script>
 <!-- bootstrap js -->
-<script src="js/bootstrap.js"></script>
+    <script src="~/js/bootstrap.js"></script>
 <!-- owl slider -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
 </script>
@@ -108,7 +112,12 @@
 <!-- nice select -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
 <!-- custom js -->
-<script src="js/custom.js"></script>
+<script src="~/js/custom.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+<script src="~/js/EnviarCorreo.js"></script>
+
+
 
 
 
