--- a/Proyecto BD/Views/Home/Carrito.cshtml
+++ b/Proyecto BD/Views/Home/Carrito.cshtml
@@ -63,7 +63,7 @@
                         </div>
                         <div >
                                 
-                                @Html.TextBoxFor(d => d.Email, null, new { @class = "form-control", id = "correo" })
+                                @Html.TextBoxFor(d => d.Email, null, new { @class = "form-control", id = "correo",  placeholder="Correo electronico" })
                                 @Html.ValidationMessageFor(d => d.Email, null, new { @style = "color:red" })
                                 
                         </div>
