--- a/Proyecto BD/Views/Home/Carrito.cshtml
+++ b/Proyecto BD/Views/Home/Carrito.cshtml
@@ -35,7 +35,7 @@
             </div>
         </nav>
     </div>
-
+    </header>
 @*<div class="hero_area">
     <div class="bg-box">
         <img src="images/hero-bg.jpg" alt="">
