--- a/Proyecto BD/Views/Home/Carrito.cshtml
+++ b/Proyecto BD/Views/Home/Carrito.cshtml
@@ -109,7 +109,7 @@
               </div>
                             <div class="btn_box" >
                                 <button id="Enviar">
-                                Comprar
+                                Adquirir
                             </button>
                         </div>
                     </form>
