--- a/Proyecto BD/Views/Home/Eventos.cshtml
+++ b/Proyecto BD/Views/Home/Eventos.cshtml
@@ -17,10 +17,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav  mx-auto ">
                     <li class="nav-item active">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <a class="nav-link" style=" color: white " asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Eventos">Eventos</a>
+                        <a class="nav-link" style=" color: goldenrod"asp-area="" asp-controller="Home" asp-action="Eventos">Eventos</a>
                     </li>
                 </ul>
                 <div class="user_option">
@@ -28,7 +28,7 @@
                         <i class="fa fa-user" aria-hidden="true"></i>
                     </a>*@
                     <a class="order_online" asp-controller="Home" asp-action="Carrito">
-                        Compra ahora
+                        Adquirir ahora
                     </a>
                 </div>
             </div>
