--- a/Proyecto BD/Views/Home/Index.cshtml
+++ b/Proyecto BD/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                         <i class="fa fa-user" aria-hidden="true"></i>
                     </a>*@
                     <a class="order_online" asp-controller="Home" asp-action="Carrito">
-                        Compra ahora
+                        Adquiere ahora
                     </a>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                                     </p>
                                     <div class="btn-box">
                                         <a class="btn1" asp-controller="Home" asp-action="Carrito">
-                                            Compra Ya
+                                            Adquiere Ya
                                         </a>
                                     </div>
                                 </div>
@@ -73,7 +73,7 @@
                                     </p>
                                     <div class="btn-box">
                                         <a class="btn1" asp-controller="Home" asp-action="Carrito">
-                                            Compra Ya
+                                            Adquiere Ya
                                         </a>
                                     </div>
                                 </div>
@@ -94,7 +94,7 @@
                                     </p>
                                     <div class="btn-box">
                                         <a class="btn1" asp-controller="Home" asp-action="Carrito">
-                                            Compra Ya
+                                            Adquiere Ya
                                         </a>
                                     </div>
                                 </div>
